<resources>
    <string name="app_name">Smartable</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search">search</string>
    <string name="pleaseInputOneBusiness">请输入一个事项</string>
    <string name="wholeDay">全天</string>
    <string name="noLabel">暂无\n标签</string>
    <string name="position">地点</string>
    <string name="noAlert">暂不\n提醒</string>
    <string name="timeTake">持续\n时间</string>

    //By 宇
    <color name="divider_color">#E6E6E6</color>
    <string name="desc">分类来查看</string>

    <string-array name="language">
        <item>中文简体</item>
    </string-array>
    <string-array name="language_values">
        <item>中文简体</item>
    </string-array>

    <string-array name="week_start">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string-array name="week_start_values">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string-array name="night_summary">
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="night_summary_values">
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string name="title_activity_single_add">SingleAddActivity</string>
    <string name="title_activity_smart_add">SmartAddActivity</string>
</resources>
