<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/paddingByLily">
        <!--输入事项窗口-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/singleAdd_bar_height"
            android:layout_margin="@dimen/singleAdd_bar_interval"
            android:background="@color/primary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/singleAdd_bar_innerPaddingVertical"
            android:paddingLeft="@dimen/singleAdd_bar_innerPaddingHorizontal"
            android:paddingRight="@dimen/singleAdd_bar_innerPaddingHorizontal"
            android:paddingTop="@dimen/singleAdd_bar_innerPaddingVertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/pleaseInputOneBusiness"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/singleAdd_bar_textSize" />

            <ImageButton
                android:id="@+id/imageButton_delete"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/icon_delete_white" />

            <ImageButton
                android:id="@+id/imageButton_done"
                android:layout_width="50dp"

                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/icon_done_white" />
        </LinearLayout>
        <!--设置时间-->
        <LinearLayout
            android:id="@+id/linearLayout_setTime"
            android:layout_width="match_parent"

            android:layout_height="@dimen/singleAdd_bar_height"
            android:layout_margin="@dimen/singleAdd_bar_interval">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <!--设置时间的上半部分-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/angle_brackets_up"
                    android:paddingLeft="@dimen/singleAdd_bar_innerPaddingHorizontal"
                    android:paddingRight="@dimen/singleAdd_bar_innerPaddingHorizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_startDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/brackets_margin"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/singleAdd_bar_textSize" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_endDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_horizontal"
                        android:layout_marginLeft="@dimen/brackets_margin"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/singleAdd_bar_textSize" />


                </LinearLayout>
                <!--设置时间的下半部分-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/angle_brackets_under"
                    android:paddingLeft="@dimen/singleAdd_bar_innerPaddingHorizontal"
                    android:paddingRight="@dimen/singleAdd_bar_innerPaddingHorizontal">


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_startTime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/brackets_margin"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/singleAdd_bar_textSize" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_endTime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/brackets_margin"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/singleAdd_bar_textSize" />
                </LinearLayout>


            </LinearLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBox_wholeDay"
                android:layout_width="@dimen/singleAdd_bar_height"
                android:layout_height="@dimen/singleAdd_bar_height"
                android:background="@drawable/add_option_bkg_whole_day"
                android:button="@null"
                android:gravity="center"
                android:enabled="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/singleAdd_bar_textSize" />
        </LinearLayout>
        <!--设置标签-->
        <LinearLayout
            android:id="@+id/linearLayout_setLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/singleAdd_bar_interval">

            <LinearLayout
                android:layout_width="@dimen/singleAdd_bar_height"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioButton_noLabel"
                    android:layout_width="@dimen/singleAdd_bar_height"
                    android:layout_height="@dimen/singleAdd_bar_height"
                    android:background="@drawable/add_option_no_label_bkg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/noLabel"
                    android:textColor="@drawable/add_option_text_color"
                    android:textSize="@dimen/singleAdd_bar_textSize" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_label"
                android:layout_width="0dp"
                android:layout_height="@dimen/singleAdd_bar_height"
                android:layout_weight="1"

                android:overScrollMode="never"></android.support.v7.widget.RecyclerView>


        </LinearLayout>
        <!--设置地点-->
        <LinearLayout
            android:id="@+id/linearLayout_setPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/singleAdd_bar_interval">

            <LinearLayout
                android:layout_width="@dimen/singleAdd_bar_height"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioButton_noPos"
                    android:layout_width="@dimen/singleAdd_bar_height"
                    android:layout_height="@dimen/singleAdd_bar_height"
                    android:background="@drawable/add_option_no_pos_bkg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/position"
                    android:textColor="@drawable/add_option_text_color"
                    android:textSize="@dimen/singleAdd_bar_textSize" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_pos"
                android:layout_width="0dp"
                android:layout_height="@dimen/singleAdd_bar_height"
                android:layout_weight="1"
                android:overScrollMode="never"

                ></android.support.v7.widget.RecyclerView>


        </LinearLayout>
        <!--设置提醒-->
        <LinearLayout
            android:id="@+id/linearLayout_setAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/singleAdd_bar_interval">

            <LinearLayout
                android:layout_width="@dimen/singleAdd_bar_height"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioButton_take"
                    android:layout_width="@dimen/singleAdd_bar_height"
                    android:layout_height="@dimen/singleAdd_bar_height"
                    android:background="@drawable/add_option_no_alert_bkg"
                    android:button="@null"
                    android:gravity="center"
                    android:enabled="false"
                    android:text="@string/timeTake"
                    android:textColor="@drawable/add_option_text_color"
                    android:textSize="@dimen/singleAdd_bar_textSize" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_take"
                android:layout_width="0dp"
                android:layout_height="@dimen/singleAdd_bar_height"
                android:layout_weight="1"
                android:overScrollMode="never"

                ></android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>

